# DistrictSync

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README.txt  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.claude/: settings.json
.claude/agents/: architect-reviewer.md  implementer-architect.md  plan-reviewer.md
.claude/plans/: 0001-config-field-strategy.md  0002-unattended-sftp-schedule-hardening.md  0003-active-student-filter-zero-orphan-enrollments.md  0004-student-attendance-spacesedu.md  0005-unify-conversion-pipeline.md  0006-fail-loud-trio.md  0007-atomic-loader-commit-rollback.md  0008-roadmap-later-cleanup.md  0009-powershell-scheduler.md  0010-single-source-version.md  0011-graceful-ui-shutdown.md  0012-ui-ux-discovery-and-redesign.md  0013-HANDOFF.md  0013-flet-production-redesign.md  0014-flet-plat1-shell.md  0015-flet-plat3-release.md  0016-flet-filepicker.md  0017-flet-design-system.md  0018-flet-ia1-shell.md  0019-flet-ia2-onboarding.md  0020-flet-ia3-home.md  0021-flet-ia4-setup-wizard.md  0022-flet-ia5-convert.md  0023-flet-ia6-run-history.md  0024-flet-ia7-help.md  0025-flet-ia8a-mapping-select.md  0026-flet-ia9-humanization.md  0027-flet-cut1-cutover.md  0028-sd60-mapping.md  0029-flet-trust-professionalism.md  0030-sd60-learnings.md  0031-sftp-trust-gaps.md  0032-ui-ux-sweep-proposal.md  0033-design-system-direction-b.md  0034-trust-correctness.md  TEMPLATE.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  flet-pack.yml  flet-verify.yml  release.yml
.streamlit/: config.toml
ARCHITECTURE_TREE/: index.html
DECISIONS/: index.html
ENGINEERING_STANDARDS/: index.html
ROADMAP/: index.html
WORKFLOW/: index.html
assets/: brand.css
claugentic-ARCHITECTURE_TREE/: index.html
claugentic-DECISIONS/: index.html
claugentic-ENGINEERING_STANDARDS/: index.html
claugentic-INVARIANTS/: index.html
claugentic-PLAYBOOK/: index.html
claugentic-PRODUCT_SPEC_TEMPLATE/: index.html
claugentic-ROADMAP/: index.html
claugentic-WORKFLOW/: index.html
claugentic-standards/: index.html
claugentic-standards/_TEMPLATE/: index.html
claugentic-standards/api-and-contracts/: index.html
claugentic-standards/data-and-persistence/: index.html
claugentic-standards/docs-traceability/: index.html
claugentic-standards/internationalization/: index.html
claugentic-standards/maintainability-structure/: index.html
claugentic-standards/observability-ops/: index.html
claugentic-standards/performance-efficiency/: index.html
claugentic-standards/product-ux/: index.html
claugentic-standards/reliability-resilience/: index.html
claugentic-standards/security/: index.html
claugentic-standards/testing/: index.html
config/: known_hosts  logging.conf
config/mappings/: mbp_all_mapping.yaml  mbp_core_mapping.yaml  mbponly_mapping.yaml  myBlueprint+_mapping.yaml  myBlueprint+_minimal_mapping.yaml  myedbc_mapping.yaml  sd40myedbc_mapping.yaml  sd48myedbc_mapping.yaml  sd51attendance_mapping.yaml  sd51myedbc_mapping.yaml  sd54myedbc_mapping.yaml  sd60myedbc_mapping.yaml  sd74myedbc_mapping.yaml
developer/adding-district/: index.html
developer/adding-transformer/: index.html
developer/architecture/: index.html
developer/release/: index.html
developer/setup/: index.html
developer/testing/: index.html
docs/: ARCHITECTURE_TREE.md  DECISIONS.md  DESIGN_SYSTEM.md  ENGINEERING_STANDARDS.md  FLET_1.0_CONVENTIONS.md  ROADMAP.md  WORKFLOW.md  claugentic-ARCHITECTURE_TREE.md  claugentic-DECISIONS.md  claugentic-ENGINEERING_STANDARDS.md  claugentic-INVARIANTS.md  claugentic-PLAN_TEMPLATE.md  claugentic-PLAYBOOK.md  claugentic-PRODUCT.md  claugentic-PRODUCT_SPEC.md  claugentic-PRODUCT_SPEC_TEMPLATE.md  claugentic-ROADMAP.md  claugentic-WORKFLOW.md  index.md
docs/claugentic-standards/: CANDIDATES.md  README.md  _TEMPLATE.md  api-and-contracts.md  data-and-persistence.md  docs-traceability.md  internationalization.md  maintainability-structure.md  observability-ops.md  performance-efficiency.md  product-ux.md  reliability-resilience.md  security.md  testing.md
docs/developer/: adding-district.md  adding-transformer.md  architecture.md  release.md  setup.md  testing.md
docs/partner/: faq.md  headless-sftp-setup.md  how-classes-work.md  installation.md  troubleshooting.md
partner/faq/: index.html
partner/headless-sftp-setup/: index.html
partner/how-classes-work/: index.html
partner/installation/: index.html
partner/troubleshooting/: index.html
scripts/: check_architecture_tree.py  ci_flet_pack_smoke.py  claugentic-check_architecture_tree.py
search/: search_index.json
src/: main.py
src/config/: __init__.py  app_config.py  loader.py  models.py
src/etl/: column_names.py  extractor.py  loader.py  pipeline.py  sync_window.py  transformer.py
src/history/: __init__.py  store.py
src/quality/: __init__.py  report.py
src/scheduler/: __init__.py  elevation.py  linux.py  windows.py
src/sftp/: __init__.py  uploader.py
src/ui/: Home.py  app.py  brand.py  (+4 more)
tests/: conftest.py  test_academic_dates_e2e.py  test_anomaly_vanish_and_archive.py  test_app_config.py  test_app_config_crash_safety.py  test_benchmarks.py  test_blended_classes.py  test_ci_flet_pack_smoke.py  test_class_generation.py  test_cli.py  test_cli_entry.py  test_config.py  test_config_field_strategy.py  test_config_loader_multi_dir.py  test_config_version_gate.py  test_contract.py  test_email_generation.py  test_enrollment_status.py  test_entry_logging.py  test_extractor.py  test_folder_picker.py  test_grade_mapping.py  test_helpers.py  test_history_store.py  test_isolation_canary.py  test_loader.py  test_logger.py  test_main_helpers.py  test_paths.py  test_pipeline_delivery_integrity.py  test_pipeline_e2e.py  test_pipeline_e2e_districts.py  test_pipeline_e2e_mbponly.py  test_pipeline_parity.py  test_pipeline_required_input.py  test_pipeline_roster_shrink.py  test_pipeline_run_store.py  test_property_based.py  test_quality_report.py  test_registry.py  (+63 more)
(+86 files in other folders)
