[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "districtsync"
version = "3.3.1"
authors = [{name = "Shan Peiris", email = "shan.peiris@myblueprint.ca"}]
description = "SIS Data ETL Tool - Converts General Data Extracts to SpacesEDU Advanced CSV"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=1.4.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "python-dateutil>=2.8.2,<3.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
# pip install -e ".[sftp]"  — enables --sftp flag
sftp = [
    "paramiko>=3.0",
    "keyring>=24.0",
]
# pip install -e ".[ui]"  — enables the Streamlit web UI
ui = [
    "streamlit>=1.30",
    "paramiko>=3.0",
    "keyring>=24.0",
]
# pip install -e ".[dev]"  — full dev/CI environment
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pandas-stubs>=2.0",
    "bandit>=1.7",
    "pyinstaller>=5.0",
    "mkdocs-material>=9.0",
    "mkdocs-with-pdf>=0.9",
]

[project.scripts]
districtsync = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not benchmark and not ui'"
markers = [
    "benchmark: performance benchmarks (deselect with '-m \"not benchmark\"')",
    "regression: golden-file snapshot tests — fail means output changed",
    "integration: tests that use real servers or filesystem I/O",
    "ui: Playwright browser smoke tests (require streamlit + chromium)",
    "property: Hypothesis property-based tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/utils/logger.py", "src/ui/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip strict (Python 3.10+)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
# Matches the single supported Python (see requires-python above + ci.yml).
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false  # pandas-stubs type errors differ across versions
warn_return_any = false
# Start lenient — tighten incrementally
strict = false

[[tool.mypy.overrides]]
module = ["src.ui.*"]
ignore_errors = true  # Streamlit stubs not available

[tool.bandit]
# B603/B607: subprocess calls — all inputs validated via validators.py
# B404: subprocess import — required for schtasks/crontab
skips = ["B404", "B603", "B607"]
