[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "districtsync"
version = "3.3.1"
authors = [{name = "Shan Peiris", email = "shan.peiris@myblueprint.ca"}]
description = "SIS Data ETL Tool - Converts General Data Extracts to SpacesEDU Advanced CSV"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=1.4.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "python-dateutil>=2.8.2,<3.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
# pip install -e ".[sftp]"  — enables --sftp flag
sftp = [
    "paramiko>=3.0",
    "keyring>=24.0",
]
# pip install -e ".[flet-ui]"  — enables the native Flet desktop UI (the only UI).
# Exact-pinned (Flet 1.0 beta); kept in lockstep with
# requirements.txt + docs/FLET_1.0_CONVENTIONS.md (test_flet_pin gates drift).
flet-ui = [
    "flet==0.85.3",
    "flet-desktop==0.85.3",
    "paramiko>=3.0",
    "keyring>=24.0",
]
# pip install -e ".[dev]"  — full dev/CI environment
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pandas-stubs>=2.0",
    "bandit>=1.7",
    "pyinstaller>=5.0",
]

[project.scripts]
districtsync = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not benchmark'"
markers = [
    "benchmark: performance benchmarks (deselect with '-m \"not benchmark\"')",
    "regression: golden-file snapshot tests — fail means output changed",
    "integration: tests that use real servers or filesystem I/O",
    "property: Hypothesis property-based tests",
]

[tool.coverage.run]
source = ["src"]
# Omit view glue only — the Flet pure modules (tokens/theme/nav) + version.py
# stay COUNTED (they carry the 80% gate); shell.py/launcher.py are thin views.
omit = [
    "src/utils/logger.py",
    "src/ui_flet/shell.py",
    "src/ui_flet/nav_rail.py",
    "src/ui_flet/launcher.py",
    "src/ui_flet/picker_field.py",
    "src/ui_flet/components.py",
    "src/ui_flet/screens/setup.py",
    "src/ui_flet/screens/onboarding.py",
    "src/ui_flet/screens/home.py",
    "src/ui_flet/screens/convert.py",
    "src/ui_flet/screens/run_history.py",
    "src/ui_flet/screens/help.py",
    "src/ui_flet/screens/mapping.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip strict (Python 3.10+)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
# Matches the single supported Python (see requires-python above + ci.yml).
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false  # pandas-stubs type errors differ across versions
warn_return_any = false
# Start lenient — tighten incrementally
strict = false

[[tool.mypy.overrides]]
module = ["src.ui_flet.*"]
ignore_errors = true  # Flet 1.0 beta has no published type stubs

[tool.bandit]
# B603/B607: subprocess calls — all inputs validated via validators.py
# B404: subprocess import — required for schtasks/crontab
skips = ["B404", "B603", "B607"]
